clusters/build-clusters/build-shared/gpu-scheduling-webhook/00_admin.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=confirm
  labels:
    multiarch.openshift.io/exclude-pod-placement: "true"
  name: gpu-scheduling-webhook
